--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ a[up-follow]:hover{
 }
 
 * {
-  font-family: "Vazirmatn", sans-serif;
+  font-family: "Titillium Web", "Vazirmatn", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
