--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
-a[up-follow]{
+a[up-follow] {
   text-decoration: none;
 }
 
-a[up-follow]:hover{
+a[up-follow]:hover {
   text-decoration: underline;
 }
 
@@ -27,8 +27,29 @@ pre {
 }
 
 
+/* ------------------------------ */
+
 @media (min-width: 992px) {
   .content-bar {
     overflow-y: scroll;
+    height: calc(100vh - 40px);
+  }
+}
+
+@media (max-width: 992px) {
+  .got-action-center {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    margin: 0px !important;
+    padding-bottom: 6px;
+    padding-top: 4px;
+    z-index: 4;
+    background-color: #fff;
+  }
+
+  * {
+    font-size: 0.92rem;
   }
 }
